k8s/infrastructure/longhorn/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
spec:
  selector:
    app: podinfo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
