k8s/infrastructure/longhorn/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ui
  #annotations:
  #  cert-manager.io/cluster-issuer: letsencrypt-prod
  #  traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  rules:
  - host: ${DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 8000
  tls:
    - hosts:
      - ${DOMAIN}
